Integration test for Judicial refresh